# wasmer-install

./: Cargo.toml  README.md  install.ps1  install.sh  install_test.ps1  install_test.sh
.github/workflows/: ci.yml
src/: main.rs
